[gd_scene format=3 uid="uid://dymxvad1jkhfp"]

[ext_resource type="Script" uid="uid://g8n6s1ggvuwy" path="res://control.gd" id="1_0fbet"]
[ext_resource type="Script" uid="uid://dca4vvbq07xvn" path="res://settings_opener.gd" id="2_62e2m"]
[ext_resource type="Script" uid="uid://d2dcaog7gtwym" path="res://settings.gd" id="3_kbped"]
[ext_resource type="Script" uid="uid://mkjjs8awu8go" path="res://volume_bar.gd" id="3_qtu10"]
[ext_resource type="Script" uid="uid://dx2vt5sywsjui" path="res://exit_settings.gd" id="4_ee4bf"]
[ext_resource type="Script" uid="uid://b0ywn45ekt5m8" path="res://return_menu_button.gd" id="6_fj5cn"]
[ext_resource type="Script" uid="uid://doikjrtifeshd" path="res://news_screen_mover.gd" id="7_iy58a"]
[ext_resource type="Script" uid="uid://danx0ybhte6gs" path="res://stock_screen_mover.gd" id="8_6a6wx"]

[sub_resource type="Gradient" id="Gradient_62e2m"]
colors = PackedColorArray(1, 1, 1, 1, 0.9111111, 0.9111111, 0.9111111, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qtu10"]
gradient = SubResource("Gradient_62e2m")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kbped"]
load_path = "res://.godot/imported/settings_icon.png-2aec0f18b1e0fd16c56ba34ef69ef014.ctex"

[node name="Control" type="Control" unique_id=2053659831]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1545337886]
position = Vector2(-2, -4)

[node name="MainMenu" type="Control" parent="." unique_id=962578855]
layout_mode = 1
anchors_preset = 0
offset_left = -581.0
offset_top = -330.0
offset_right = 574.0
offset_bottom = 317.0

[node name="Button" type="Button" parent="MainMenu" unique_id=736862732]
layout_mode = 0
offset_left = 25.0
offset_top = 599.0
offset_right = 62.0
offset_bottom = 636.0
text = "QUIT"

[node name="PlayText" type="RichTextLabel" parent="MainMenu" unique_id=216645975]
layout_mode = 0
offset_left = 265.0
offset_top = 81.0
offset_right = 906.0
offset_bottom = 173.0
text = "Stock Trading in an Alternate World"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="MainMenu" unique_id=2067489760]
layout_mode = 0
offset_left = 387.0
offset_top = 198.0
offset_right = 786.0
offset_bottom = 292.0
text = "Play"

[node name="SettingsOpener" type="Button" parent="MainMenu" unique_id=1252875900]
layout_mode = 0
offset_left = 387.0
offset_top = 356.0
offset_right = 786.0
offset_bottom = 450.0
text = "Settings"
script = ExtResource("2_62e2m")

[node name="Background" type="Sprite2D" parent="." unique_id=1092133334]
visible = false
z_index = -2
z_as_relative = false
position = Vector2(-4, -4.999998)
scale = Vector2(4.5, 649)
texture = SubResource("GradientTexture1D_qtu10")

[node name="Settings" type="Control" parent="." unique_id=598453037]
visible = false
anchors_preset = 0
offset_left = -577.0
offset_top = -330.0
offset_right = 585.0
offset_bottom = 316.0
script = ExtResource("3_kbped")
metadata/LastOpen = ""

[node name="VolumeBar" type="Control" parent="Settings" unique_id=1323716124]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(213, 127)
script = ExtResource("3_qtu10")

[node name="VolumeSlider" type="HScrollBar" parent="Settings/VolumeBar" unique_id=1516015970]
layout_mode = 0
offset_left = 542.0
offset_top = 205.0
offset_right = 622.0
offset_bottom = 213.0
step = 1.0
rounded = true

[node name="VolumeReader" type="RichTextLabel" parent="Settings/VolumeBar" unique_id=129023184]
layout_mode = 0
offset_left = 627.0
offset_top = 197.0
offset_right = 681.0
offset_bottom = 219.0
text = "0"
scroll_active = false

[node name="VolumeHeader" type="RichTextLabel" parent="Settings/VolumeBar" unique_id=690886591]
layout_mode = 0
offset_left = 542.0
offset_top = 171.0
offset_right = 642.0
offset_bottom = 193.0
text = "Volume "
scroll_active = false

[node name="ExitSettings" type="Button" parent="Settings" unique_id=1795321709]
layout_mode = 0
offset_left = 1033.129
offset_top = 29.0
offset_right = 1091.0
offset_bottom = 75.0
text = "X"
script = ExtResource("4_ee4bf")

[node name="NewsMenu" type="Control" parent="." unique_id=2121891766]
visible = false
anchors_preset = 0
offset_left = -581.0
offset_top = -322.0
offset_right = 583.0
offset_bottom = 319.0

[node name="NewsHeader" type="RichTextLabel" parent="NewsMenu" unique_id=367163225]
layout_mode = 0
offset_left = 467.0
offset_top = 143.0
offset_right = 686.0
offset_bottom = 240.0
text = "					PNN
PAXTORIA NEWS NETWORK"

[node name="MinorEventTextA" type="RichTextLabel" parent="NewsMenu" unique_id=1921124857]
layout_mode = 0
offset_left = 276.0
offset_top = 319.0
offset_right = 495.0
offset_bottom = 416.0
text = "Something A"

[node name="MinorEventTextB" type="RichTextLabel" parent="NewsMenu" unique_id=1231000588]
layout_mode = 0
offset_left = 745.0
offset_top = 316.0
offset_right = 964.0
offset_bottom = 413.0
text = "Something B"

[node name="SettingsIcon" type="Button" parent="NewsMenu" unique_id=1692128919]
layout_mode = 0
offset_left = 25.0
offset_top = 570.4375
offset_right = 74.0
offset_bottom = 621.7097
icon = SubResource("CompressedTexture2D_kbped")
expand_icon = true
script = ExtResource("2_62e2m")

[node name="ReturnMenuButton" type="Button" parent="NewsMenu" unique_id=2070657731]
layout_mode = 0
offset_left = 91.0
offset_top = 570.0
offset_right = 140.0
offset_bottom = 621.2722
text = "X"
expand_icon = true
script = ExtResource("6_fj5cn")

[node name="NewsScreenMover" type="Button" parent="NewsMenu" unique_id=449558072]
layout_mode = 0
offset_left = 20.0
offset_right = 138.0
offset_bottom = 49.0
text = "NEWS SCREEN"
flat = true
script = ExtResource("7_iy58a")

[node name="StockScreenMover" type="Button" parent="NewsMenu" unique_id=74585702]
layout_mode = 0
offset_left = 1020.0
offset_right = 1143.0
offset_bottom = 49.0
text = "STOCK SCREEN"
script = ExtResource("8_6a6wx")

[node name="StockMenu" type="Control" parent="." unique_id=201495546]
visible = false
anchors_preset = 0
offset_left = -577.0
offset_top = -322.0
offset_right = 581.0
offset_bottom = 328.0

[node name="SettingsIcon" type="Button" parent="StockMenu" unique_id=1637362966]
layout_mode = 0
offset_left = 23.0
offset_top = 564.4375
offset_right = 72.0
offset_bottom = 615.7097
icon = SubResource("CompressedTexture2D_kbped")
expand_icon = true
script = ExtResource("2_62e2m")

[node name="ReturnMenuButton" type="Button" parent="StockMenu" unique_id=182424745]
layout_mode = 0
offset_left = 89.0
offset_top = 564.0
offset_right = 138.0
offset_bottom = 615.2722
text = "X"
expand_icon = true
script = ExtResource("6_fj5cn")

[node name="NewsScreenMover" type="Button" parent="StockMenu" unique_id=289866005]
layout_mode = 0
offset_left = 28.0
offset_top = 10.0
offset_right = 146.0
offset_bottom = 59.0
text = "NEWS SCREEN"
script = ExtResource("7_iy58a")

[node name="StockScreenMover" type="Button" parent="StockMenu" unique_id=1630498464]
layout_mode = 0
offset_left = 1018.0
offset_right = 1141.0
offset_bottom = 49.0
text = "STOCK SCREEN"
flat = true
script = ExtResource("8_6a6wx")

[connection signal="pressed" from="MainMenu/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MainMenu/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MainMenu/SettingsOpener" to="MainMenu/SettingsOpener" method="_on_pressed"]
[connection signal="value_changed" from="Settings/VolumeBar/VolumeSlider" to="Settings/VolumeBar" method="_on_h_scroll_bar_value_changed"]
[connection signal="pressed" from="Settings/ExitSettings" to="Settings/ExitSettings" method="_on_pressed"]
[connection signal="pressed" from="NewsMenu/SettingsIcon" to="NewsMenu/SettingsIcon" method="_on_pressed"]
[connection signal="pressed" from="NewsMenu/ReturnMenuButton" to="NewsMenu/ReturnMenuButton" method="_on_pressed"]
[connection signal="pressed" from="NewsMenu/NewsScreenMover" to="NewsMenu/NewsScreenMover" method="_on_pressed"]
[connection signal="pressed" from="NewsMenu/StockScreenMover" to="NewsMenu/StockScreenMover" method="_on_pressed"]
[connection signal="pressed" from="StockMenu/SettingsIcon" to="StockMenu/SettingsIcon" method="_on_pressed"]
[connection signal="pressed" from="StockMenu/ReturnMenuButton" to="StockMenu/ReturnMenuButton" method="_on_pressed"]
[connection signal="pressed" from="StockMenu/NewsScreenMover" to="StockMenu/NewsScreenMover" method="_on_pressed"]
